--- a/styles/main.css
+++ b/styles/main.css
@@ -524,15 +524,16 @@ main .hompi .inform_g .move {
 main .hompi .inform_g .guest {
   width: 93%;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 15px;
   height: 225px;
   overflow-y: scroll;
   /* 그누보드-방명록 */
 }
 main .hompi .inform_g .guest iframe {
   padding: 10px;
+  border: none;
   width: 100%;
-  height: 500px;
+  height: 1000px;
 }
 
 @keyframes move {
