--- a/styles/main.scss
+++ b/styles/main.scss
@@ -223,12 +223,12 @@ main {
                 border-radius:10px; position:relative; top:25px; left:0;
             }
             .guest {
-                width:93%; margin:0 auto; margin-top:20px;
+                width:93%; margin:0 auto; margin-top:15px;
                 height:225px; overflow-y:scroll;
                 /* 그누보드-방명록 */
                 iframe {
-                    padding:10px;
-                    width:100%; height:500px;
+                    padding:10px; border:none;
+                    width:100%; height:1000px;
                 }
             }
         }
